Prevent popups slightly overflowing the screen.
The previous value of max-height caused the popup to overflow the
screen in Mobile Safari.  Another option is to remove the top margin on
.popup-title, but this seems cleaner and more effective.

--- a/skin/main.less
+++ b/skin/main.less
@@ -107,7 +107,7 @@ input[type="text"] { box-shadow: none !important; }
 	left: 0; right: 0;
 	margin: auto;
 	max-width: 90%;
-	max-height: 90%;
+	max-height: 84%;
 	overflow: auto;
 	border: @border-normal;
 	border-radius: @border-radius;
